[tool.poetry]
name = "o365creeper-ng"
version = "0.1.0"
description = "Stealthy o365 user validation"
authors = ["mchoji <mchoji@users.noreply.github.com>"]
license = "BSD 2-Clause"

[tool.poetry.dependencies]
python = "^3.8"
stem = "^1.8.0"
aiohttp = "^3.9.0b0"
aiohttp-socks = "^0.7.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
